2021-07-06  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version): Release 2.17.0
	* NEWS.md: Update for Ensmallen release 2.17.0
	* inst/include/ensmallen_bits: Upgraded to Ensmallen 2.17.0
	* inst/include/ensmallen.hpp: ditto

2021-03-26  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version): Release 2.16.2
	* NEWS.md: Update for Ensmallen release 2.16.2
	* inst/include/ensmallen_bits: Upgraded to Ensmallen 2.16.2
	* inst/include/ensmallen.hpp: ditto

2021-03-05  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version): Release 2.16.1
	* NEWS.md: Update for Ensmallen release 2.16.1
	* inst/include/ensmallen_bits: Upgraded to Ensmallen 2.16.1
	* inst/include/ensmallen.hpp: ditto

2021-02-19  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version): Release 2.16.0
	* NEWS.md: Update for Ensmallen release 2.16.0
	* inst/include/ensmallen_bits: Upgraded to Ensmallen 2.16.0
	* inst/include/ensmallen.hpp: ditto

2020-11-06  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version): Release 2.15.1
	* NEWS.md: Update for Ensmallen release 2.15.1
	* inst/include/ensmallen_bits: Upgraded to Ensmallen 2.15.1
	* inst/include/ensmallen.hpp: ditto

2020-11-03  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version): Release 2.15.0
	* NEWS.md: Update for Ensmallen release 2.15.0
	* inst/include/ensmallen_bits: Upgraded to Ensmallen 2.15.0
	* inst/include/ensmallen.hpp: ditto

2020-09-05  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version): Release 2.14.2
	* NEWS.md: Update for Ensmallen release 2.14.2
	* inst/include/ensmallen_bits: Upgraded to Ensmallen 2.14.2
	* inst/include/ensmallen.hpp: ditto

2020-08-22  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version): Release 2.14.1
	* NEWS.md: Update for Ensmallen release 2.14.1
	* inst/include/ensmallen_bits: Upgraded to Ensmallen 2.14.1
	* inst/include/ensmallen.hpp: ditto

	* .github/workflows/R-CMD-check.yaml: Re-enable devel build check by